License has been changed

--- a/roboligo_cli/package.xml
+++ b/roboligo_cli/package.xml
@@ -7,7 +7,7 @@
 
   <maintainer email="juanscelyg@gmail.com">Juan S. Cely G.</maintainer>
 
-  <license>GPL-3.0-only</license>
+  <license>Apache License 2.0</license>
 
   <author>Juan S. Cely G.</author>
   
