--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -24,8 +24,18 @@ jobs:
         with:
           doxyfile-path: ".github/Doxyfile"
 
+      - name: Upload generated site (artifact)
+        uses: actions/upload-artifact@v4
+        with:
+          name: doxygen-public
+          path: public
+          if-no-files-found: error
+
       - name: Doxygen Deployment
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
+          publish_dir: public
+          exclude_assets: .github
+          enable_jekyll: false
