--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -3,7 +3,7 @@ name: Doxygen Deployment
 on:
   push:
     branches:
-      - main
+      - rolling
   schedule:
     - cron: '0 0 * * 6'
   workflow_dispatch:
